servicios buscar, solcitar unirse y aceptar
